chore: 버전업에 맞춰 코드 수정